k8s/apps/hass/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  type: ExternalName
  externalName: hass.home # defined in CoreDNS config
  ports:
    - port: 8123
